<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OllaDroid</string>
    <string name="settings">Settings</string>
    <string name="controlling_camera">Controlling Camera</string>
    <string name="from_system">System Camera</string>
    <string name="from_custom_camera">Custom Camera</string>
    <string name="to_be_continue">To be Continue…</string>
    <string name="animation_test">Animation Test</string>
    <string name="swipe_refresh">Swipe Refresh</string>
    <string name="upload_photo">Upload photo?</string>
    <string name="verify_dl_license">Verify Driver\'s License now?</string>
    <string name="photo_rejected">photo rejected, please upload again…</string>
    <string name="dl_rejected">Driver\'s License was Rejected, please upload again</string>
    <string name="photo_pending_review">Photo pending review</string>
    <string name="dl_pending_review">Driver\'s License pending review</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_action_bar_test">ActionBarTestActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="clear_ali_cookie">Clear Ali Cookie</string>
    <string name="clear_all_cookie">Clear All Cookie</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_browser">BrowserActivity</string>
    <string name="title_activity_range_seek">RangeSeekActivity</string>
    <string name="action_settings">Settings</string>
    <string name="shop_search_price_no_min">no min</string>
    <string name="notification_content">Tap to open VPN settings</string>
    <string name="title_activity_progress_animation">Progress Animation</string>
    <string name="title_activity_data_binding">Data Binding</string>
    <string name="welcome_to_x">Welcome to %1$s</string>
    <string name="app_name_reg_title"><![CDATA[<b>Sha<font color=#f04e2b>Bi</font></b>]]></string>
    <string name="title_activity_search_view">SearchViewActivity</string>

</resources>
